feat: Implement status bar color management for Flutter runs
- Add terminal color handling to prevent orange status bar highlights
- Implement debug session detection for proper run/stop button states
- Store and restore original VS Code settings on activation/deactivation
- Add support for user-configurable terminal color behavior
- Fix issue with debugging not showing proper status indicators
- Add proper cleanup for terminal and debug sessions
- Implement toggleRunLocation command for switching terminal/debug console
- Respect VS Code's debug.enableStatusBarColor workspace setting

This commit enhances the user experience by providing consistent visual
feedback when running Flutter apps, with proper cleanup of resources
when stopping apps or deactivating the extension.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "main": "./out/extension.js",
   "contributes": {
     "configuration": {
-      "title": "Flutter Runner",
+      "title": "Flutter Rapid Runner",
       "properties": {
         "flutterRunner.runIn": {
           "type": "string",
@@ -58,6 +58,22 @@
           ],
           "default": "run",
           "description": "Mode to run the Flutter app"
+        },
+        "flutterRapidRunner.disableTerminalHighlighting": {
+          "type": "boolean",
+          "default": true,
+          "description": "Disable the terminal highlight effect (orange status bar) when running Flutter apps"
+        },
+        "flutterRapidRunner.terminalColorBehavior": {
+          "type": "string",
+          "enum": ["default", "preserve", "custom"],
+          "default": "preserve",
+          "description": "Control how terminal affects status bar color: 'default' (VS Code's orange), 'preserve' (keep current), or 'custom' (set custom color)"
+        },
+        "flutterRapidRunner.customTerminalColor": {
+          "type": "string",
+          "default": "#007ACC",
+          "description": "Custom status bar color to use when terminal is focused (only used when terminalColorBehavior is 'custom')"
         }
       }
     },
